--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
    },
    "private": true,
    "dependencies": {
-      "angular-cli-ghpages": "^1.0.0-rc.2",
       "@angular/animations": "^12.2.1",
       "@angular/cdk": "^12.2.1",
       "@angular/common": "~12.2.0",
@@ -21,6 +20,11 @@
       "@angular/platform-browser": "~12.2.0",
       "@angular/platform-browser-dynamic": "~12.2.0",
       "@angular/router": "~12.2.0",
+      "@fortawesome/angular-fontawesome": "^0.9.0",
+      "@fortawesome/fontawesome-common-types": "^0.2.36",
+      "@fortawesome/fontawesome-svg-core": "^1.2.36",
+      "@fortawesome/free-brands-svg-icons": "^5.15.4",
+      "angular-cli-ghpages": "^1.0.0-rc.2",
       "rxjs": "~6.6.0",
       "tslib": "^2.3.0",
       "w3-css": "^4.1.0",
