--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "@fortawesome/fontawesome-common-types": "^0.2.36",
       "@fortawesome/fontawesome-svg-core": "^1.2.36",
       "@fortawesome/free-brands-svg-icons": "^5.15.4",
+      "@fortawesome/free-regular-svg-icons": "^5.15.4",
       "angular-cli-ghpages": "^1.0.0-rc.2",
       "rxjs": "~6.6.0",
       "tslib": "^2.3.0",
